# Blackbox

./: CMakeLists.txt  README.md
clients/: CMakeLists.txt
clients/blackbox/: CMakeLists.txt  anonymous_execution_monitor.c  basic_block_hashtable.c  basic_block_hashtable.h  basic_block_observer.c  basic_block_observer.h  blackbox.c  blacklist.c  blacklist.h  crowd_safe_gencode.c  crowd_safe_gencode.h  crowd_safe_trace.c  crowd_safe_trace.h  crowd_safe_util.c  crowd_safe_util.h  execution_monitor.h  image_execution_monitor.c  indirect_link_hashtable.c  indirect_link_hashtable.h  indirect_link_observer.c  indirect_link_observer.h  link_observer.c  link_observer.h  module_observer.c  module_observer.h  network_monitor.c  network_monitor.h
clients/drcov/: drcov.c  drcov2lcov.c
core/: CMakeLists.txt  CMake_checkdeps.cmake  dispatch.c  dispatch.h  dynamo.c  emit.c  fcache.c  fragment.c  fragment.h  globals.h  hashtablex.h  link.c  link.h  module_list.c  module_shared.h  monitor.c  monitor.h  options.c  options.h  optionsx.h  os_shared.h  synch.c  utils.c  utils.h  vmareas.c  vmareas.h
core/lib/: dr_api.h  genapi.pl  globals_shared.h
core/win32/: callback.c  inject_shared.h  module_shared.c  ntdll.c  ntdll.h  ntdll_types.h  os.c  syscall.c  syscallx.h
core/x86/: arch.c  arch.h  arch_exports.h  audit.c  audit.h  disassemble.c  emit_utils.c  encode.c  instr.h  instr_create.h  instrument.c  instrument.h  interp.c  mangle.c
ext/drcontainers/: CMakeLists.txt  drhashtable.c  drhashtable.h  drhashtablex.h  drmultimap.h  drmultimapx.h  drvector.h  drvectorx.h
ext/drsyms/: drsyms_linux.c  drsyms_windows.c
ext/drwrap/: drwrap.c
ext/drx/: drx.c
make/: configure.cmake.h
